# autograph

./: .gitignore  __init__.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
analyzers/: entity_extractor.py  relationship_builder.py  schema_analyzer.py
core/: config.py  exceptions.py  graph_builder.py
docs/: architecture.md  current_status.md  goals.md  publish_to_pypi.md
embeddings/: embedding_generator.py  vector_index.py
graph_store/: __init__.py  connection.py  query_builder.py  schema_manager.py
loaders/: __init__.py  auto_detector.py  csv_loader.py  json_loader.py
tests/: conftest.py  fetch_ai_articles.py  logger.py  smoke_test.py  test_embeddings.py  test_entity_extractor.py  test_final_csv.py  test_final_json.py  test_final_jsonl.py  test_graph_builder.py  test_graph_store.py  test_loaders.py  test_relationship_builder.py  test_schema_analyzer.py  test_validators.py
utils/: llm_client.py  validators.py
